--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuestic-ui": "^1.10.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
